--- a/cv/index.html
+++ b/cv/index.html
@@ -33,7 +33,7 @@ title: CV of Yu-wen Lin
 		</ul>
 		<h2>Publications</h2>
 		<ul>
-        <li><p><strong>Yu-Wen Lin</strong>. Developing a Digital Twin for Indoor Environments: A Case Study (2020). RadCool: a Web-enabled Simulation Tool for Radiative Cooling" (August 3, 2017). <em>Thesis</em>. </p></li>
+        <li><p><strong>Yu-Wen Lin</strong>. Developing a Digital Twin for Indoor Environments: A Case Study (2020). <em>Thesis</em>. </p></li>
 		<li><p><strong>Yu-wen Lin</strong>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel. RadCool: a Web-enabled Simulation Tool for Radiative Cooling (2017). <em>The Summer Undergraduate Research Fellowship (SURF) Symposium</em>. Paper 42. [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p></li>
 		</ul>
 		<h2>Professional/Research Experience</h2>
