--- a/pub/index.html
+++ b/pub/index.html
@@ -13,7 +13,7 @@ title: Publications
 </ul>
 <h4>Publications</h4>
 <ul>
-    <li><p><b>Developing a Digital Twiin for Indoor Environments: A Case Study</b><br>
+    <li><p><b>Developing a Digital Twin for Indoor Environments: A Case Study</b><br>
     <b>Yu-Wen Lin</b><br>
     <em>Master Thesis (2020)</em>
     </p>
