--- a/cv/index.html
+++ b/cv/index.html
@@ -10,7 +10,7 @@ title: CV of Yu-wen Lin
 		Cory Hall 406<br>
 		Berkeley, CA 94720<br>
 		(206) 886-7535<br>
-		<span class="obfuscate">yuwen.lin@berkeley.edu</span>
+		<span class="obfuscate">yuwen.lin (at) berkeley.edu</span>
 		</address>
 		<h2>Education</h2>
 		<ul>
